<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ProductAddTextStyle"
            android:text="@string/product_name" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/product_name"
                style="@style/ProductAddFormStyle"
                android:hint="@string/product_name"
                android:inputType="textCapWords" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ProductAddTextStyle"
            android:text="@string/product_price" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">


            <EditText
                android:id="@+id/product_price"
                style="@style/ProductAddFormStyle"
                android:hint="@string/product_price"
                android:inputType="number" />


        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ProductAddTextStyle"
            android:text="@string/product_quantity" />

            <Button
                android:id="@+id/decrement"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/decrement"
                android:textAppearance="?android:textAppearanceLarge"/>
            <EditText
                android:id="@+id/product_quantity"
                style="@style/ProductAddFormStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/product_quantity"
                android:text="0"
                android:inputType="number" />
            <Button
                android:id="@+id/increment"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/increment"
                android:textAppearance="?android:textAppearanceLarge"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ProductAddTextStyle"
            android:text="@string/product_supplier_name" />

        <Spinner
            android:id="@+id/product_supplier_name"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingRight="16dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ProductAddTextStyle"
            android:text="@string/product_supplier_phone_number" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/product_supplier_phone_number"
                style="@style/ProductAddFormStyle"
                android:hint="@string/product_supplier_phone_number"
                android:inputType="number" />

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textAppearance="?android:textAppearanceLarge"/>

    </LinearLayout>
</LinearLayout>